# lolz-auto-buyer

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  config.example.ini  config.ini.example  main.py  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: linters.yaml
src/: __main__.py
src/base/: __init__.py  api.py  errors.py  types.py
src/config/: __init__.py  base_field.py  parser.py
src/market/: __init__.py  api.py  base.py  item.py  types.py
src/telegram/: __init__.py  api.py
