[tool.poetry]
name = "lolz-auto-buyer"
version = "1.1.4"
description = "Application for buying accounts from market lolzteam forum"
authors = ["ZeN220 <hidden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

flake8 = "^5.0.4"
# Flake8 plugins
flake8-bugbear = "^23.1.20"
flake8-commas = "^2.1.0"
flake8-isort = "^6.0.0"
flake8-logging-format = "^0.9.0"
flake8-broken-line = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# In some functions, that work with responses of API, we can't know the type of response
disable_error_code = ["type-arg"]

[tool.black]
line-length = 80
